--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,9 +7,17 @@ h1 {
 }
 
 .card {
+    display: grid;
     background-color: orange;
     width: 300px;
     height: 350px;
+
+    margin: 20px;
+    cursor: pointer
+}
+
+.card:hover {
+    transform: scale(1.07);
 }
 
 .card > img {
@@ -19,9 +27,14 @@ h1 {
     background-color: orchid;
 }
 
+.card > p {
+    text-align: center;
+}
+
 .img-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
