--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,9 +1,31 @@
+.App {
+    background-color: rgba(144, 238, 144, 0.616);
+}
+
 h1 {
-    font-size: 34px;
+    font-size: 44px;
 }
 
 .header {
-    background-color: aqua;
+    background-color: rgba(0, 255, 255, 0.747);
+    text-align: center;
+
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.header > p {
+    font-size: 24px;
+    padding: 5px;
+}
+
+.score {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.score > p {
+    margin: 3px;
 }
 
 .card {
@@ -29,6 +51,7 @@ h1 {
 
 .card > p {
     text-align: center;
+    font-size: 28px;
 }
 
 .img-container {
@@ -47,8 +70,9 @@ h1 {
     flex-shrink: 0;
     
     padding: 5px;
+    margin-top: 15px;
 
-    background-color: red;
+    background-color: aqua;
 }
 
 .footer-text {
